src/assets/text-meta-content.css
span[title] {
  cursor: help;
}

hgroup:has(p) {
  h1,
  h2,
  h3 {
    margin-bottom: 0;
  }

  p {
    margin-top: 0;
    color: var(--text-color-secondary);
  }
}

.leaf-node {
  list-style: disc;
  margin-left: 2rem;

  h1 {
    font-size: x-large;
  }
}

/* The only place this is h2 is in search results */
h2 {
  margin-top: 0;
}

